--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@
            
             $.ajax({
                 type: "GET",
-                url: "https://grootan.free.beeceptor.com",
+                url: "https://grootantech.free.beeceptor.com",
                 success: function (data) {
                     datas = data
                     var index
