Upadted Home Page

--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@
            
             $.ajax({
                 type: "GET",
-                url: "https://divakar.free.beeceptor.com",
+                url: "https://grootandetails.free.beeceptor.com",
                 success: function (data) {
                     datas = data
                     var index
